# ai-flows

./: .env.example  EXAMPLE.md  QUICKSTART.md  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: bootstrap.py  errors.py  logging_config.py  main.py  settings.py
app/config/: loader.py  models.py  validator.py
app/graph/: builder.py  conditions.py  nodes.py  registry.py  runner.py  state.py
app/llm/: factory.py
app/modules/: __init__.py  datasource.py  ocr.py  retrieval.py  support.py  transforms.py
app/prompts/: legal_disclaimer.md  letter_body.md  letter_closing.md  letter_intro.md  polish.md
app/prompts/discharge/: followup.md  merge.md  summary.md  treatment.md
app/prompts/support/: classify.md  disclaimer.md  draft.md  polish.md
configs/: letter_generation.yaml  ocr_summary.yaml  support_reply.yaml  ticket_triage.yaml
docs/: LLM_PROVIDERS.md
tests/: conftest.py  test_api.py  test_conditions.py  test_e2e.py  test_flow.py  test_prompts.py  test_source.py  test_support_flow.py  test_validation.py
tests/configs/: e2e_letter.yaml
